Added report for code review, Lenka's zerotier presentation

--- a/documents/p_team_code_review.tex
+++ b/documents/p_team_code_review.tex
@@ -123,7 +123,7 @@ language=C++
 \frametitle{Style}
 
 \begin{itemize}
-\item \textbf{Project} -- inconsistent method naming
+\item \textbf{General} -- inconsistent method naming
 \item \textbf{General} -- hardcoded strings, lots of magic constants depending on these strings
 \item \textbf{General} -- using exit(1) inside functions -- code can't be modified to parse multiple files
 \item \textbf{Team.cpp, Player.cpp} -- code duplicity
